fixed mobile-style which overlapped half the screen

--- a/sass/credentials.scss
+++ b/sass/credentials.scss
@@ -70,7 +70,13 @@
 #app-content {
 
   margin-left: 300px;
-  width: calc(100vw - 300px);
+
+  @media only screen and (max-width: 769px) {
+    width: 100vw;
+  }
+  @media only screen and (min-width: 770px) {
+    width: calc(100vw - 300px);
+  }
 
   overflow-x: hidden;
 
